--- a/index.html
+++ b/index.html
@@ -204,14 +204,31 @@
 
 <p>Click <a href="https://kennethbunker.github.io/columns">here</a> to read my columns in the press.
 
-<div class="book-box">
+<div class="book-box" style="position: relative; display: inline-block;">
   <p style="margin: 0;">
     <strong>Chile's Transformation Amidst Crisis:<br>
     The Theseus Paradox</strong><br><br>
-    <a href="https://kennethbunker.github.io/theseus/" target="_blank">
+    <a href="https://kennethbunker.github.io/theseus/" target="_blank" style="position: relative; display: inline-block;">
       <img src="../img/book1.png" alt="Book Image" width="170" height="170" style="border: none;">
+      <!-- Look Inside Arrow -->
+      <span style="
+        position: absolute;
+        top: 8px;
+        right: -25px;
+        background: #ff9900;
+        color: white;
+        font-size: 12px;
+        font-weight: bold;
+        padding: 4px 6px;
+        border-radius: 2px;
+        transform: rotate(20deg);
+        box-shadow: 0 2px 4px rgba(0,0,0,0.2);
+        ">
+        ► Look Inside
+      </span>
     </a><br><br>
-    NEW BOOK – <a href="https://www.dpbolvw.net/click-101446916-12898971?url=https%3A%2F%2Flink.springer.com%2Fbook%2F9783031964626" style="text-decoration: none; font-weight: bold; color: #0077cc;">PRE-ORDER</a> -  <a href="https://kennethbunker.github.io/theseus/" style="text-decoration: none; font-weight: bold; color: #0077cc;">SEPT 2025</a>
+    NEW BOOK – <a href="https://www.dpbolvw.net/click-101446916-12898971?url=https%3A%2F%2Flink.springer.com%2Fbook%2F9783031964626" style="text-decoration: none; font-weight: bold; color: #0077cc;">PRE-ORDER</a> -  
+    <a href="https://kennethbunker.github.io/theseus/" style="text-decoration: none; font-weight: bold; color: #0077cc;">SEPT 2025</a>
   </p>
 </div>
 
