--- a/index.html
+++ b/index.html
@@ -210,27 +210,28 @@
     The Theseus Paradox</strong><br><br>
     <a href="https://kennethbunker.github.io/theseus/" target="_blank" style="position: relative; display: inline-block;">
       <img src="../img/book1.png" alt="Book Image" width="170" height="170" style="border: none;">
-      <!-- Look Inside Arrow -->
+      <!-- Look Inside Vertical Label -->
       <span style="
         position: absolute;
-        top: 8px;
-        right: -25px;
-        background: #ff9900;
-        color: white;
-        font-size: 12px;
+        top: 0;
+        right: 0;
+        background: #555;
+        color: #fff;
+        font-size: 10px;
         font-weight: bold;
-        padding: 4px 6px;
-        border-radius: 2px;
-        transform: rotate(20deg);
-        box-shadow: 0 2px 4px rgba(0,0,0,0.2);
+        writing-mode: vertical-rl;
+        text-orientation: mixed;
+        padding: 4px 2px;
+        border-bottom-left-radius: 4px;
         ">
-        ► Look Inside
+        LOOK INSIDE
       </span>
     </a><br><br>
     NEW BOOK – <a href="https://www.dpbolvw.net/click-101446916-12898971?url=https%3A%2F%2Flink.springer.com%2Fbook%2F9783031964626" style="text-decoration: none; font-weight: bold; color: #0077cc;">PRE-ORDER</a> -  
     <a href="https://kennethbunker.github.io/theseus/" style="text-decoration: none; font-weight: bold; color: #0077cc;">SEPT 2025</a>
   </p>
 </div>
+
 
 
 <p>I received my PhD in political science from The London School of Economics. The purpose of my dissertation was to understand how and why parties form electoral and government coalitions in presidentialism. You can read an example of that work <a href="https://doi.org/10.18042/cepc/rep.186.06">here</a>.</p>
