--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
       <span style="
         position: absolute;
         bottom: 20px;
-        right: 4px;
+        right: 2px;
         background: #e0e0e0;
         color: #333;
         font-size: 11px;
@@ -229,7 +229,7 @@
         <span style="margin-left: 4px;">➔</span>
       </span>
     </a><br><br>
-    NEW BOOK – <a href="https://www.dpbolvw.net/click-101446916-12898971?url=https%3A%2F%2Flink.springer.com%2Fbook%2F9783031964626" style="text-decoration: none; font-weight: bold; color: #0077cc;">PRE-ORDER</a> -  
+    NEW BOOK – <a href="https://www.dpbolvw.net/click-101446916-12898971?url=https%3A%2F%2Flink.springer.com%2Fbook%2F9783031964626" style="text-decoration: none; font-weight: bold; color: #0077cc;">PRE-ORDER now</a> -  
     <a href="https://kennethbunker.github.io/theseus/" style="text-decoration: none; font-weight: bold; color: #0077cc;">SEPT 2025</a>
   </p>
 </div>
