--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
       <!-- Look Inside Tag -->
       <span style="
         position: absolute;
-        bottom: 40px;
+        top: 2px;
         right: 2px;
         background: #e0e0e0;
         color: #333;
