--- a/theseus/buy/index.html
+++ b/theseus/buy/index.html
@@ -303,7 +303,7 @@
   <div id="footer" class="mb-5">
     <hr>
     <div class="container text-center">
-      <a href="https://twitter.com/kennethbunker"><small>2025</small></a>
+      <a href="https://x.com/kennethbunker"><small>2025</small></a>
     </div>
   </div>
 
