--- a/theseus/index.html
+++ b/theseus/index.html
@@ -193,7 +193,7 @@
                 <h5 class="card-title mb-1">Covers</h5>
                 <p class="card-text">High-res front and back</p>
                 <div class="mt-auto">
-                  <a class="btn btn-sm btn-outline-primary" href="https://kennethbunker.github.io/theseus/Covers.pdf" target="_blank" rel="noopener noreferrer">Download (PDF)</a>
+                  <a class="btn btn-sm btn-outline-primary" href="https://kennethbunker.github.io/theseus/Covers.pdf" target="_blank" rel="noopener noreferrer">PDF</a>
                 </div>
               </div>
             </div>
