--- a/theseus/index.html
+++ b/theseus/index.html
@@ -354,7 +354,7 @@
       <!-- ========= CHAPTER 1 ========= -->
       <div id="ch1" style="border:1px solid #999; border-radius:12px; padding:40px 20px; margin:40px auto; max-width:700px; text-align:center; box-sizing:border-box;">
         <div style="margin:0;">
-          <strong>CHILE'S TRANSFORMATION AMIDST CRISIS: THE THESEUS PARADOX</strong><br><br>
+          <strong>CHILE'S TRANSFORMATION AMIDST CRISIS: THE THESEUS PARADOX</strong><br>
           <em>CHAPTER 1: From stability to upheaval</em><br><br>
 
           <strong>Author:</strong>
