--- a/theseus/index.html
+++ b/theseus/index.html
@@ -130,7 +130,7 @@
   <div class="container mt-5">
     <nav class="navbar navbar-expand-sm flex-column flex-sm-row text-nowrap p-0">
       <a class="navbar-brand mx-0 mr-sm-auto" href="https://kennethbunker.github.io">Kenneth Bunker</a>
-      <div class="navbar-nav flex-row flex-wrap justify-content-center">
+      <div class="navbar-nav flex-row flex-nowrap justify-content-center">
         <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="https://kennethbunker.github.io/">Home</a>
         <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="https://kennethbunker.github.io/press">In the Press</a>
         <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="https://kennethbunker.github.io/prensa">Prensa</a>
@@ -142,7 +142,6 @@
    target="_blank" rel="noopener noreferrer"
    aria-label="Amazon Author profile">
   <img src="https://www.amazon.com/favicon.ico" alt="" width="10" height="10" loading="lazy" decoding="async">
-  <span class="d-none d-sm-inline">Amazon</span>
 </a>
       </div>
     </nav>
