--- a/theseus/index.html
+++ b/theseus/index.html
@@ -138,11 +138,13 @@
         <!-- ✅ A11Y: mark current page -->
         <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="https://kennethbunker.github.io/theseus" aria-current="page">Book</a>
         <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="https://kennethbunker.github.io/contact">Contact</a>
-        <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="https://www.amazon.com/author/kennethbunker"
-   target="_blank" rel="noopener noreferrer"
-   aria-label="Amazon Author profile">
-  <img src="https://www.amazon.com/favicon.ico" alt="" width="10" height="10" loading="lazy" decoding="async">
-</a>
+        <a class="btn btn-sm btn-outline-primary mr-2 mb-2 d-flex align-items-center justify-content-center"
+           href="https://www.amazon.com/author/kennethbunker"
+           target="_blank" rel="noopener noreferrer"
+           aria-label="Amazon Author profile"
+           style="width:32px; height:32px; padding:0;">
+          <img src="https://www.amazon.com/favicon.ico" alt="" width="16" height="16" loading="lazy" decoding="async">
+        </a>
       </div>
     </nav>
   </div>
