--- a/index.html
+++ b/index.html
@@ -202,7 +202,13 @@
 </figure>
 <p>I am an academic, consultant, and columnist. I serve as an associate professor and director of the Democracy and Government Lab in the Economics Department at San Sebastian University. I also work with several organizations that provide discreet, reliable solutions to investors, stakeholders, and risk analysts around the world.</p>
 
-<p>Click <a href="https://kennethbunker.github.io/columns">here</a> to read my columns in the press.
+<p>Follow me on my Amazon Authors website <a class="btn btn-sm btn-outline-primary mr-2 mb-2 d-flex align-items-center justify-content-center"
+           href="https://www.amazon.com/author/kennethbunker"
+           target="_blank" rel="noopener noreferrer"
+           aria-label="Amazon Author profile"
+           style="width:32px; height:32px; padding:0;">
+          <img src="https://www.amazon.com/favicon.ico" alt="" width="16" height="16" loading="lazy" decoding="async">
+        </a>
 
 <div class="book-box" style="position: relative; display: inline-block;">
   <p style="margin: 0;">
