--- a/index.html
+++ b/index.html
@@ -204,12 +204,14 @@
 
 <p>
   Follow me on my Amazon Authors website
-  <a href="https://www.amazon.com/author/kennethbunker"
+  <a class="btn btn-sm btn-outline-primary d-inline-flex align-items-center justify-content-center"
+     href="https://www.amazon.com/author/kennethbunker"
      target="_blank" rel="noopener noreferrer"
-     aria-label="Amazon Author profile">
+     aria-label="Amazon Author profile"
+     style="width:22px; height:22px; padding:0; margin-left:4px;">
     <img src="https://www.amazon.com/favicon.ico"
-         alt="Amazon logo" width="16" height="16"
-         style="vertical-align:middle; margin-left:4px;">
+         alt="Amazon logo" width="12" height="12"
+         loading="lazy" decoding="async">
   </a>
 </p>
 
