--- a/index.html
+++ b/index.html
@@ -180,8 +180,8 @@
         <a class="navbar-brand mx-0 mr-sm-auto" href="https://kennethbunker.github.io">Kenneth Bunker</a>
 <div class="navbar-nav flex-row flex-wrap justify-content-center">
   <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="https://kennethbunker.github.io/cv.pdf" target="_blank" rel="noopener noreferrer">CV</a>
-  <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="https://kennethbunker.github.io/press">In the Press</a>
-  <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="https://kennethbunker.github.io/prensa">Prensa</a>
+  <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="https://kennethbunker.github.io/#in-the-press">In the Press</a>
+  <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="https://kennethbunker.github.io/#en-la-prensa">Prensa</a>
   <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="https://kennethbunker.github.io/columns">Columns</a>
   <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="https://kennethbunker.github.io/theseus">Book</a>
   <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="https://kennethbunker.github.io/contact">Contact</a>
