--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
 <p>I am an academic, consultant, and columnist. I serve as an associate professor and director of the Democracy and Government Lab in the Economics Department at San Sebastian University. I also work with several organizations that provide discreet, reliable solutions to investors, stakeholders, and risk analysts around the world.</p>
 
 <p>
-  Follow me on my Amazon Authors website
+  Follow me on my Amazon authors website
   <a class="btn btn-sm btn-outline-primary d-inline-flex align-items-center justify-content-center"
      href="https://www.amazon.com/author/kennethbunker"
      target="_blank" rel="noopener noreferrer"
@@ -247,7 +247,7 @@
         <span style="margin-left: 4px;">➔</span>
       </span>
     </a><br><br>
-    NEW BOOK – <a href="https://www.dpbolvw.net/click-101446916-12898971?url=https%3A%2F%2Flink.springer.com%2Fbook%2F9783031964626" style="text-decoration: none; font-weight: bold; color: #0077cc;">BUY HERE</a> -  
+    NEW BOOK – <a href="https://www.dpbolvw.net/click-101446916-12898971?url=https%3A%2F%2Flink.springer.com%2Fbook%2F9783031964626" style="text-decoration: none; font-weight: bold; color: #0077cc;">PRE-ORDER NOW</a> -  
     <a href="https://kennethbunker.github.io/theseus/" style="text-decoration: none; font-weight: bold; color: #0077cc;">SEPT 2025</a>
   </p>
 </div>
