--- a/theseus/files/index.html
+++ b/theseus/files/index.html
@@ -138,7 +138,14 @@
       <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="https://kennethbunker.github.io/theseus/#resources">Code</a>
       <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="https://kennethbunker.github.io/theseus/files/">Files</a>
       <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="https://kennethbunker.github.io/theseus/images/">Images</a>
-    </div>
+        <a class="btn btn-sm btn-outline-primary mr-2 mb-2 d-flex align-items-center justify-content-center"
+           href="https://www.amazon.com/author/kennethbunker"
+           target="_blank" rel="noopener noreferrer"
+           aria-label="Amazon Author profile"
+           style="width:32px; height:32px; padding:0;"> 
+          <img src="https://www.amazon.com/favicon.ico" alt="" width="12" height="12" loading="lazy" decoding="async">
+        </a>
+            </div>
   </div>
 
 
