--- a/theseus/buy/index.html
+++ b/theseus/buy/index.html
@@ -138,7 +138,14 @@
         <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="https://kennethbunker.github.io/columns">Columns</a>
         <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="https://kennethbunker.github.io/theseus">Book</a>
         <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="https://kennethbunker.github.io/contact">Contact</a>
-      </div>
+        <a class="btn btn-sm btn-outline-primary mr-2 mb-2 d-flex align-items-center justify-content-center"
+           href="https://www.amazon.com/author/kennethbunker"
+           target="_blank" rel="noopener noreferrer"
+           aria-label="Amazon Author profile"
+           style="width:32px; height:32px; padding:0;"> 
+          <img src="https://www.amazon.com/favicon.ico" alt="" width="12" height="12" loading="lazy" decoding="async">
+        </a>
+    </div>
     </nav>
   </div>
   <hr>
@@ -259,7 +266,23 @@
 
           <a href="https://shop.lehrmittelverlag.lu.ch/detail/ISBN-9783031964626/Bunker-Kenneth/Chiles-Transformation-Amidst-Crisis" target="_blank" rel="noopener noreferrer">
             <img src="https://shop.lehrmittelverlag.lu.ch/htdyn/9WVYRPCWNVF/logo-large.webp" alt="Lehrmittelverlag Luzern" style="height: 40px;" loading="lazy" decoding="async">
-          </a>
+  
+  <a href="https://bookshop.org/p/books/chile-s-transformation-amidst-crisis-the-theseus-paradox-kenneth-bunker/22666240" target="_blank" rel="noopener noreferrer">
+  <img src="https://cdn.bookshop.org/static/images/logo.svg" alt="Bookshop.org" style="height: 40px;" loading="lazy" decoding="async">
+</a>
+
+<a href="https://lateknightbooks.com/products/9783031964626" target="_blank" rel="noopener noreferrer">
+  <img src="https://lateknightbooks.com/cdn/shop/files/LateKnightBooksLogo.png" alt="Late Knight Books" style="height: 40px;" loading="lazy" decoding="async">
+</a>
+
+<a href="https://www.foyles.co.uk/book/chiles-transformation-amidst-crisis/kenneth-bunker/9783031964626" target="_blank" rel="noopener noreferrer">
+  <img src="https://cdn.foyles.co.uk/assets/images/foyles-logo.svg" alt="Foyles" style="height: 40px;" loading="lazy" decoding="async">
+</a>
+
+<a href="https://www.mightyape.co.nz/product/chiles-transformation-amidst-crisis/40406354" target="_blank" rel="noopener noreferrer">
+  <img src="https://assets.mightyape.co.nz/assets/mightyape-logo.svg" alt="Mighty Ape (NZ)" style="height: 40px;" loading="lazy" decoding="async">
+</a>
+        </a>
         </div>
       </div>
 
