--- a/theseus/buy/index.html
+++ b/theseus/buy/index.html
@@ -266,23 +266,24 @@
 
           <a href="https://shop.lehrmittelverlag.lu.ch/detail/ISBN-9783031964626/Bunker-Kenneth/Chiles-Transformation-Amidst-Crisis" target="_blank" rel="noopener noreferrer">
             <img src="https://shop.lehrmittelverlag.lu.ch/htdyn/9WVYRPCWNVF/logo-large.webp" alt="Lehrmittelverlag Luzern" style="height: 40px;" loading="lazy" decoding="async">
-  
-          <a href="https://bookshop.org/p/books/chile-s-transformation-amidst-crisis-the-theseus-paradox-kenneth-bunker/22666240" target="_blank" rel="noopener noreferrer">
-          <img src="https://cdn.bookshop.org/static/images/logo.svg" alt="Bookshop.org" style="height: 40px;" loading="lazy" decoding="async">
-        </a>
+       </a> 
 
         <a href="https://lateknightbooks.com/products/9783031964626" target="_blank" rel="noopener noreferrer">
-          <img src="https://lateknightbooks.com/cdn/shop/files/LateKnightBooksLogo.png" alt="Late Knight Books" style="height: 40px;" loading="lazy" decoding="async">
+          <img src="https://lateknightbooks.com/cdn/shop/files/Knight_logo_aa5f2e00-db6d-41fa-a496-60e6dceb8619.png" alt="Late Knight Books" style="height: 40px;" loading="lazy" decoding="async">
         </a>
 
         <a href="https://www.foyles.co.uk/book/chiles-transformation-amidst-crisis/kenneth-bunker/9783031964626" target="_blank" rel="noopener noreferrer">
-          <img src="https://cdn.foyles.co.uk/assets/images/foyles-logo.svg" alt="Foyles" style="height: 40px;" loading="lazy" decoding="async">
+          <img src="https://pbs.twimg.com/profile_images/965969802744483840/qCIDtHNg_400x400.jpg" alt="Foyles" style="height: 40px;" loading="lazy" decoding="async">
         </a>
 
         <a href="https://www.mightyape.co.nz/product/chiles-transformation-amidst-crisis/40406354" target="_blank" rel="noopener noreferrer">
-          <img src="https://assets.mightyape.co.nz/assets/mightyape-logo.svg" alt="Mighty Ape (NZ)" style="height: 40px;" loading="lazy" decoding="async">
+          <img src="https://static.kogan.com/k4/static/assets/mightyape-logo-djeA9QLb.svg" alt="Mighty Ape (NZ)" style="height: 40px;" loading="lazy" decoding="async">
         </a>
+
+        <a href="https://www.kulturkaufhaus.de/de/detail/ISBN-9783031964626/Bunker-Kenneth/Chiles-Transformation-Amidst-Crisis" target="_blank" rel="noopener noreferrer">
+          <img src="https://www.kulturkaufhaus.de/htdyn/3HKDZ4XW26S9/kuka-logo.svg" alt="Mighty Ape (NZ)" style="height: 40px;" loading="lazy" decoding="async">
         </a>
+        
         </div>
       </div>
 
