--- a/theseus/buy/index.html
+++ b/theseus/buy/index.html
@@ -283,7 +283,11 @@
         <a href="https://www.kulturkaufhaus.de/de/detail/ISBN-9783031964626/Bunker-Kenneth/Chiles-Transformation-Amidst-Crisis" target="_blank" rel="noopener noreferrer">
           <img src="https://www.kulturkaufhaus.de/htdyn/3HKDZ4XW26S9/kuka-logo.svg" alt="Mighty Ape (NZ)" style="height: 40px;" loading="lazy" decoding="async">
         </a>
-        
+
+        <a href="https://www.beck-shop.de/bunker-chiles-transformation-amidst-crisis/product/39244466" target="_blank" rel="noopener noreferrer">
+          <img src="https://www.beck-shop.de/media/5318/beck-shop-logo_svg.svg?rmode=pad&quality=80&v=1d69c69b10c22b0" alt="Mighty Ape (NZ)" style="height: 40px;" loading="lazy" decoding="async">
+        </a>
+                
         </div>
       </div>
 
