--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
 <p>I am an academic, consultant, and columnist. I serve as an associate professor and director of the Democracy and Government Lab in the Economics Department at San Sebastian University. I also work with several organizations that provide discreet, reliable solutions to investors, stakeholders, and risk analysts around the world.</p>
 
 <p>
-  Follow me on my Amazon authors website
+  Follow me on Amazon
   <a class="btn btn-sm btn-outline-primary d-inline-flex align-items-center justify-content-center"
      href="https://www.amazon.com/author/kennethbunker"
      target="_blank" rel="noopener noreferrer"
