--- a/interviews/index.html
+++ b/interviews/index.html
@@ -131,6 +131,9 @@
 <hr>
 <ul>
 
+
+<li><strong>El Mercurio</strong>. <a href="https://www.litoralpress.cl/sitio/Prensa_Detalles.cshtml?LPKey=LR7R2OTSOVI66CHCAEU4LVRYFC3OSQSDEB6F3RPQ7N2WMUUI3X5NQCUQVXQIYZVJEY6AMEG5HY4RC">Kenneth Bunker: "El voto voluntario permite que los candidatos que tienen posiciones más extremas se vean potenciados".</a> 4 September, 2025.</li>
+
 <li><strong>Ex-Ante</strong>. <a href="https://www.ex-ante.cl/kenneth-bunker-y-negociacion-oficialista-haber-incluido-hasta-la-dc-es-una-victoria-del-partido-comunista/">Kenneth Bunker y negociación oficialista: “Haber incluido hasta la DC es una victoria del Partido Comunista”.</a> 17 August, 2025.</li>
 
 <li><strong>Ex Ante</strong>. <a href="https://www.ex-ante.cl/kenneth-bunker-si-la-derecha-se-canibaliza-puede-entregarle-el-poder-al-pc/">Kenneth Bunker: “Si la derecha se canibaliza puede entregarle el poder al PC”.</a> 16 July, 2025.</li>
