--- a/index.html
+++ b/index.html
@@ -262,6 +262,8 @@
 
 <hr>
 
+<h2 id="publications">Selected publications</h2>
+
 <p>You can find a short list of my most recent publications below:</p>
 <ul>
 
