--- a/index.html
+++ b/index.html
@@ -252,6 +252,8 @@
   </p>
 </div>
 
+<h2 id="publications">About me</h2>
+
 <p>I received my PhD in political science from The London School of Economics. The purpose of my dissertation was to understand how and why parties form electoral and government coalitions in presidentialism. You can read an example of that work <a href="https://doi.org/10.18042/cepc/rep.186.06">here</a>.</p>
 
 <p>I am currently an associate professor at San Sebastian University. Before that, I was an Assistant Professor at Universidad Central, and held visiting positions at Sapienza University, University of Milan, and University of Bergamo. I founded the Democracy and Government Lab at USS and the Electoral Program at Universidad Central.</p>
@@ -259,6 +261,8 @@
 <p>My research has mainly focused on the interaction between electoral systems and party systems and electoral forecasting. Among other things, I created an innovative method called the Two-Stage Model (TSM). You can read more about it <a href="https://www.sciencedirect.com/science/article/abs/pii/S0169207020300212?via%3Dihub">here</a>.
 
 <p>I am an adjunct researcher at CEDES-USS and MEPOP-UDP. I am also a reviewer for government grants in Chile and academic journals in the field of political science. Here is my full <a href="https://kennethbunker.github.io/cv.pdf">CV</a>.</p>
+
+<p>Outside academia, I am a columnist for Chilean daily newspaper <a href="http://www.lun.com/">Las Últimas Noticias</a> and online website <a href="http://www.ex-ante.cl/">Ex-Ante</a>, Executive Director of consultancy group <a href="http://www.tresquintos.cl/">Tresquintos</a>, and co-creator of online election game <a href="http://www.twitter.com/electoraldeathm">#ElectoralDeathMatch</a>. You can also follow me on <a href="http://www.twitter.com/kennethbunker">X</a>!</p>
 
 <hr>
 
@@ -300,9 +304,6 @@ Polarization and Conservative Reactions </em> [Editors: André Borges, Ryan Lloy
 <p>2019. “Matthew S. Shugart and Rein Taagepera: Votes from seats: Logical models of electoral systems.” <em>Public Choice</em> 178(1-2): 311-313. <a href="https://doi.org/10.1080/13510347.2018.1536123">doi</a>.</p>
 
 <p>2018. “The 2017 Elections and the Fragmentation of the Party System in Chile.” <em>Revista Chilena de Derecho y Ciencia Política</em> 9(2): 204-229. <a href="http://10.0.30.90/RCHDYCP-V9N2-ART1823">doi</a>.</p>
-
-<hr>
-<p>Outside academia, I am a columnist for Chilean daily newspaper <a href="http://www.lun.com/">Las Últimas Noticias</a> and online website <a href="http://www.ex-ante.cl/">Ex-Ante</a>, Executive Director of consultancy group <a href="http://www.tresquintos.cl/">Tresquintos</a>, and co-creator of online election game <a href="http://www.twitter.com/electoraldeathm">#ElectoralDeathMatch</a>. You can also follow me on <a href="http://www.twitter.com/kennethbunker">X</a>!</p>
 
 <hr>
 
