--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
 
 <p>I received my PhD in political science from The London School of Economics. The purpose of my dissertation was to understand how and why parties form electoral and government coalitions in presidentialism. You can read an example of that work <a href="https://doi.org/10.18042/cepc/rep.186.06">here</a>.</p>
 
-<p>I am currently an associate professor at San Sebastian University. Before that, I was an Assistant Professor at Universidad Central, and held visiting positions at Sapienza University, University of Milan, and University of Bergamo. I founded the Democracy and Government Lab at USS and the Electoral Program at Universidad Central.</p>
+<p>I am currently an Associate Professor at San Sebastian University. Before that, I was an Assistant Professor at Universidad Central, and held visiting positions at Sapienza University, University of Milan, and University of Bergamo. I founded the Democracy and Government Lab at USS and the Electoral Program at Universidad Central.</p>
 
 <p>My research has mainly focused on the interaction between electoral systems and party systems and electoral forecasting. Among other things, I created an innovative method called the Two-Stage Model (TSM). You can read more about it <a href="https://www.sciencedirect.com/science/article/abs/pii/S0169207020300212?via%3Dihub">here</a>.
 
