--- a/theseus/files/index.html
+++ b/theseus/files/index.html
@@ -155,7 +155,7 @@
   <div class="section-title">CHAPTER 2 – The 1980 Constitution</div>
   <div class="inner mt-3">
 
-    <div class="subhead">Documents</div>
+    <div class="subhead">Supporting documents</div>
     <ul class="file-list">
       <li class="item-row">
         <span class="file-title">Constitution (1980)</span>
@@ -171,7 +171,7 @@
       </li>
     </ul>
 
-    <div class="subhead">Literature</div>
+    <div class="subhead">Further reading</div>
     <ul class="file-list">
       <li class="item-row">
         <span class="file-title">Alemán, E.; Saiegh, S. M. (2007). Legislative preferences, political parties, and coalition unity in Chile. <em>Comparative Politics</em>, 39(3), 253–272.</span>
@@ -269,7 +269,7 @@
   <div class="section-title">CHAPTER 3 – Neoliberalism: Problem or solution?</div>
   <div class="inner mt-3">
 
-    <div class="subhead">Documents</div>
+    <div class="subhead">Supporting documents</div>
     <ul class="file-list">
       <li class="item-row">
         <span class="file-title">El Ladrillo</span>
@@ -278,7 +278,7 @@
       </li>
     </ul>
 
-    <div class="subhead">Literature</div>
+    <div class="subhead">Further reading</div>
     <ul class="file-list">
       <li class="item-row">
         <span class="file-title">Brown, W. (2015). <em>Undoing the Demos: Neoliberalism’s Stealth Revolution</em>. New York: Zone Books.</span>
@@ -338,7 +338,7 @@
       </li>
     </ul>
 
-    <div class="subhead">References</div>
+    <div class="subhead">Background references</div>
     <ul class="file-list">
       <li class="item-row">
         <span class="file-title">Aranda, A. (2024). Presidente Boric destaca aprobación de la ley corta de Isapres y afirma que la postura del gobierno era evitar un “perdonazo”. <em>La Tercera</em>. May 14.</span>
@@ -443,7 +443,7 @@
       </li>
     </ul>
 
-    <div class="subhead">Literature</div>
+    <div class="subhead">Further reading</div>
     <ul class="file-list">
       <li class="item-row">
         <span class="file-title">Allamand, A.; Cubillos, M. (2010). <em>La estrella y el arco iris: Cómo después de 20 años fue derrotada la Concertación</em>. Santiago: Aguilar.</span>
@@ -503,7 +503,7 @@
       </li>
     </ul>
 
-    <div class="subhead">References</div>
+    <div class="subhead">Background references</div>
     <ul class="file-list">
       <li class="item-row">
         <span class="file-title">Aranda, A. (2023). Tras triunfo del “En contra”: Francisco Vidal dice que Carta Magna vigente es “la Constitución firmada por el Presidente Ricardo Lagos.” <em>La Tercera</em>. Dec 20.</span>
@@ -560,7 +560,7 @@
   <div class="section-title">CHAPTER 5 – The paradox of progress</div>
   <div class="inner mt-3">
 
-    <div class="subhead">Documents</div>
+    <div class="subhead">Supporting documents</div>
     <ul class="file-list">
       <li class="item-row">
         <span class="file-title">El Ladrillo</span>
@@ -568,7 +568,7 @@
       </li>
     </ul>
 
-    <div class="subhead">Literature</div>
+    <div class="subhead">Further reading</div>
     <ul class="file-list">
       <li class="item-row">
         <span class="file-title">Atria, F.; Larraín, G.; Benavente, J. M.; Couso, J.; Joignant, A. (2013). <em>El otro modelo: del orden neoliberal al régimen de lo público</em>. Santiago: Debate.</span>
@@ -644,7 +644,7 @@
       </li>
     </ul>
 
-    <div class="subhead">References</div>
+    <div class="subhead">Background references</div>
     <ul class="file-list">
       <li class="item-row">
         <span class="file-title">ABC de España. (2014, January 29). “La crisis argentina no afecta a Chile…”</span>
@@ -745,7 +745,7 @@
   <div class="inner mt-3">
 
 
-    <div class="subhead">Documents</div>
+    <div class="subhead">Supporting documents</div>
     <ul class="file-list">
       <li class="item-row">
         <span class="file-title">Constitution (1811)</span>
@@ -786,7 +786,7 @@
   </ul>
 
 
-    <div class="subhead">Literature</div>
+    <div class="subhead">Further reading</div>
     <ul class="file-list">
       <li class="item-row">
         <span class="file-title">Angell, A. (2003). Party change in Chile in comparative perspective. <em>Revista de Ciencia Política</em>, 23(2), 88–108.</span><a class="tiny-link" href="http://www.scielo.cl/scielo.php?script=sci_arttext&pid=S0718-090X2003000200005" target="_blank" rel="noopener noreferrer">GO</a>
@@ -925,7 +925,7 @@
       </li>
     </ul>
 
-    <div class="subhead">References</div>
+    <div class="subhead">Background references</div>
     <ul class="file-list">
       <li class="item-row">
         <span class="file-title">Author’s website.</span>
@@ -975,7 +975,7 @@
   <div class="section-title">CHAPTER 7 – The erosion of voter–party linkages and representation backsliding</div>
   <div class="inner mt-3">
 
-    <div class="subhead"><strong>Documents</strong></div>
+    <div class="subhead"><strong>Supporting documents</strong></div>
     <ul class="file-list">
       <li class="item-row">
         <span class="file-title">Law 18.603</span>
@@ -992,7 +992,7 @@
 
     </ul>
 
-    <div class="subhead mt-3"><strong>Literature</strong></div>
+    <div class="subhead mt-3"><strong>Further reading</strong></div>
     <ul class="file-list">
       <li class="item-row">
         <span class="file-title">Brieba, D.; Bunker, K. (2019). “Voter equalization and turnout bias after electoral reform: Evidence from Chile’s voluntary voting law.” <em>Latin American Politics and Society</em>, 61(4), 23–46.</span>
@@ -1028,7 +1028,7 @@
       </li>
     </ul>
 
-    <div class="subhead mt-3"><strong>References</strong></div>
+    <div class="subhead mt-3"><strong>Background references</strong></div>
     <ul class="file-list">
       <li class="item-row">
         <span class="file-title">Ramos, N. (2013, November 11). “Servel afirma que siguen figurando votantes muertos en este proceso electoral.” <em>La Tercera</em>.</span>
@@ -1090,7 +1090,7 @@
   <div class="section-title">CHAPTER 8 – Emergence of a rupturist discourse</div>
   <div class="inner mt-3">
 
-    <div class="subhead"><strong>Documents</strong></div>
+    <div class="subhead"><strong>Supporting documents</strong></div>
     <ul class="file-list">
       <li class="item-row">
         <span class="file-title">Constitutional Proposal (2018)</span>
@@ -1098,7 +1098,7 @@
       </li>
     </ul>
 
-    <div class="subhead mt-3"><strong>Literature</strong></div>
+    <div class="subhead mt-3"><strong>Further reading</strong></div>
     <ul class="file-list">
       <li class="item-row">
         <span class="file-title">Bellolio, C. (2019). “Juego de generaciones: las claves del recambio político en Chile.” <em>Estudios Públicos</em>, 154, 201–229.</span>
@@ -1122,7 +1122,7 @@
       </li>
     </ul>
 
-    <div class="subhead mt-3"><strong>References</strong></div>
+    <div class="subhead mt-3"><strong>Background references</strong></div>
     <ul class="file-list">
       <li class="item-row">
         <span class="file-title">BBC Mundo. (2011, August 10). “Las razones de las protestas estudiantiles en Chile.”</span>
@@ -1220,7 +1220,7 @@
   <div class="section-title">CHAPTER 9 – October 18, 2019</div>
   <div class="inner mt-3">
 
-    <div class="subhead"><strong>Documents</strong></div>
+    <div class="subhead"><strong>Supporting documents</strong></div>
     <ul class="file-list">
       <li class="item-row">
         <span class="file-title">Metro Fare Hike (Ley 42470)</span>
@@ -1229,7 +1229,7 @@
     </ul>
 
 
-    <div class="subhead mt-3"><strong>References</strong></div>
+    <div class="subhead mt-3"><strong>Background references</strong></div>
     <ul class="file-list">
       <li class="item-row">
         <span class="file-title">24 Horas. (2019, October 16). “Clemente Pérez por evasiones masivas en el Metro: ‘Es una protesta más bien tonta y poco justificada’.”</span>
@@ -1334,7 +1334,7 @@
   <div class="section-title"><strong>CHAPTER 10 – The Constitutional Design</strong></div>
   <div class="inner mt-3">
 
-    <div class="subhead"><strong>Documents</strong></div>
+    <div class="subhead"><strong>Supporting documents</strong></div>
     <ul class="file-list">
       <li class="item-row">
         <span class="file-title">Acuerdo por la Paz y una Nueva Constitución (2019)</span>
@@ -1350,7 +1350,7 @@
       </li>
     </ul>
 
-    <div class="subhead mt-3"><strong>Literature</strong></div>
+    <div class="subhead mt-3"><strong>Further reading</strong></div>
     <ul class="file-list">
       <li class="item-row">
         <span class="file-title">Blumel, G. (2023). <em>La vuelta larga: Crónica personal de la crisis de octubre</em>. Santiago: Ediciones UC.</span>
@@ -1370,7 +1370,7 @@
       </li>
     </ul>
 
-    <div class="subhead mt-3"><strong>References</strong></div>
+    <div class="subhead mt-3"><strong>Background references</strong></div>
     <ul class="file-list">
       <li class="item-row">
         <span class="file-title">BBC Mundo. (2015, May 7). “Bachelet pide la renuncia de todos sus ministros.”</span>
@@ -1456,7 +1456,7 @@
   <div class="section-title"><strong>CHAPTER 11 – The rise of Gabriel Boric</strong></div>
   <div class="inner mt-3">
 
-    <div class="subhead"><strong>Documents</strong></div>
+    <div class="subhead"><strong>Supporting documents</strong></div>
     <ul class="file-list">
       <li class="item-row">
         <span class="file-title">The first speech of Gabriel Boric (2022)</span>
@@ -1464,7 +1464,7 @@
       </li>
     </ul>
 
-    <div class="subhead mt-3"><strong>Literature</strong></div>
+    <div class="subhead mt-3"><strong>Further reading</strong></div>
     <ul class="file-list">
       <li class="item-row">
         <span class="file-title">Nogué, A.; Barozet, E. (2023). “Dio de una crisis del sistema político: la trayectoria del Frente Amplio chileno y sus limitaciones (2011–2022).” <em>Revista de Ciencia Política</em>, 61(1), 7–35.</span>
@@ -1476,7 +1476,7 @@
       </li>
     </ul>
 
-    <div class="subhead mt-3"><strong>References</strong></div>
+    <div class="subhead mt-3"><strong>Background references</strong></div>
     <ul class="file-list">
       <li class="item-row">
         <span class="file-title">ADN Radio. (2021, October 22). “Eduardo Artés realizó llamativas declaraciones sobre Corea del Norte y el K-pop.”</span>
@@ -1570,7 +1570,7 @@
   <div class="section-title"><strong>CHAPTER 12 – The 2021–2022 Constitutional Convention</strong></div>
   <div class="inner mt-3">
 
-    <div class="subhead"><strong>Documents</strong></div>
+    <div class="subhead"><strong>Supporting documents</strong></div>
     <ul class="file-list">
       <li class="item-row">
         <span class="file-title">Constitutional Proposal (2022)</span>
@@ -1594,7 +1594,7 @@
       </li>
     </ul>
 
-    <div class="subhead mt-3"><strong>Literature</strong></div>
+    <div class="subhead mt-3"><strong>Further reading</strong></div>
     <ul class="file-list">
       <li class="item-row">
         <span class="file-title">Bunker, K. (2023a). ¿Cuál fue el nivel de acuerdo en el pleno de la convención constitucional de 2021? <em>Ideas: Laboratorio Democracia y Gobierno USS</em>, 1(6), 1–4.</span>
@@ -1618,7 +1618,7 @@
       </li>
     </ul>
 
-    <div class="subhead mt-3"><strong>References</strong></div>
+    <div class="subhead mt-3"><strong>Background references</strong></div>
     <ul class="file-list">
       <li class="item-row">
         <span class="file-title">BBC Mundo. (2022, April 8). “Convención Constituyente: 3 razones que explican la caída en el apoyo al organismo…”</span>
@@ -1677,7 +1677,7 @@
   <div class="inner mt-3">
 
 
-    <div class="subhead mt-3"><strong>References</strong></div>
+    <div class="subhead mt-3"><strong>Background references</strong></div>
     <ul class="file-list">
       <li class="item-row">
         <span class="file-title">Barry, E. (2022, September 5). “Why Chileans rejected a new, progressive Constitution.” <em>TIME</em>.</span>
@@ -1741,7 +1741,7 @@
   <div class="section-title"><strong>CHAPTER 14 – Constitutional Resurrection</strong></div>
   <div class="inner mt-3">
 
-    <div class="subhead"><strong>Documents</strong></div>
+    <div class="subhead"><strong>Supporting documents</strong></div>
     <ul class="file-list">
       <li class="item-row">
         <span class="file-title">Acuerdo por Chile</span>
@@ -1749,7 +1749,7 @@
       </li>
     </ul>
 
-    <div class="subhead mt-3"><strong>References</strong></div>
+    <div class="subhead mt-3"><strong>Background references</strong></div>
     <ul class="file-list">
       <li class="item-row">
         <span class="file-title">Durán, V. H. (2022, July 27). “Intervencionismo electoral: El mensaje del contralor Bermúdez que encendió todas las alarmas en La Moneda.” <em>Ex-Ante</em>.</span>
@@ -1805,7 +1805,7 @@
   <div class="section-title"><strong>CHAPTER 15 – From Instability to Realignment</strong></div>
   <div class="inner mt-3">
 
-    <div class="subhead"><strong>Documents</strong></div>
+    <div class="subhead"><strong>Supporting documents</strong></div>
     <ul class="file-list">
       <li class="item-row">
         <span class="file-title">Homicide Report (2024)</span>
@@ -1817,7 +1817,7 @@
       </li>
     </ul>
 
-    <div class="subhead mt-3"><strong>Literature</strong></div>
+    <div class="subhead mt-3"><strong>Further reading</strong></div>
     <ul class="file-list">
       <li class="item-row">
         <span class="file-title">Costa, R. (2023). <em>Impactos económicos y financieros de retiros de ahorros previsionales</em>. Santiago: Banco Central de Chile.</span>
@@ -1833,7 +1833,7 @@
       </li>
     </ul>
 
-    <div class="subhead mt-3"><strong>References</strong></div>
+    <div class="subhead mt-3"><strong>Background references</strong></div>
     <ul class="file-list">
       <li class="item-row">
         <span class="file-title">Arciniegas, Y. (2020, July 23). “Chile: Senado aprueba el retiro anticipado de pensiones en medio de la pandemia de COVID-19.” <em>France 24</em>.</span>
@@ -1927,7 +1927,7 @@
   <div class="section-title"><strong>CHAPTER 16 – The (Second) Constitutional Council</strong></div>
   <div class="inner mt-3">
 
-    <div class="subhead"><strong>Documents</strong></div>
+    <div class="subhead"><strong>Supporting documents</strong></div>
     <ul class="file-list">
       <li class="item-row">
         <span class="file-title">Constitutional Proposal (2023).</span>
@@ -1943,7 +1943,7 @@
       </li>
     </ul>
 
-    <div class="subhead mt-3"><strong>Literature</strong></div>
+    <div class="subhead mt-3"><strong>Further reading</strong></div>
     <ul class="file-list">
       <li class="item-row">
         <span class="file-title">Bunker, K. (2023c). ¿Cuál fue el nivel de acuerdo en el pleno del consejo constitucional de 2023? <em>Ideas: Laboratorio Democracia y Gobierno USS</em>, 1(7): 1–4.</span>
@@ -1967,7 +1967,7 @@
       </li>
     </ul>
 
-    <div class="subhead mt-3"><strong>References</strong></div>
+    <div class="subhead mt-3"><strong>Background references</strong></div>
     <ul class="file-list">
       <li class="item-row">
         <span class="file-title">Ex-Ante. (2023, May 27). “Renuncia al Consejo Constitucional Aldo Sanhueza, ex republicano acusado de abuso sexual.”</span>
@@ -2012,7 +2012,7 @@
   <div class="section-title"><strong>CHAPTER 17 – Coming to Terms: Why the Second Constitutional Process Failed</strong></div>
   <div class="inner mt-3">
 
-    <div class="subhead mt-3"><strong>References</strong></div>
+    <div class="subhead mt-3"><strong>Background references</strong></div>
     <ul class="file-list">
       <li class="item-row">
         <span class="file-title">Ávila Cárdenas, M.; Pizarro, G. (2023, October 30). “Propuesta Constitucional: los ocho artículos que impedirían la competencia democrática de todas las ideas.” <em>CIPER</em>.</span>
